@@ -83,6 +83,9 @@ CVS code -
 	- Assert that filename isn't NULL, and don't do anything special
 	  if it's blank, as the the former case shouldn't occur, and the
 	  latter case is now handled elsewhere. (DLR)
+  input_tab()
+	- Make columns an int instead of a size_t, since it's limited by
+	  COLS. (DLR)
 - global.c:
   shortcut_init()
 	- Simplify wording of nano_gotoline_msg. (Jordi and Ken Tyler)
